--- a/index.html
+++ b/index.html
@@ -8,5 +8,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <main>
+        <h1>シンプルTODO</h1>
+        <form>
+            <input type="text" placeholder="やることを入力して Enter または 追加を押す" />
+            <button type="submit">追加</button>
+        </form>
+        <section>
+            <div>
+                <button>すべて</button>
+                <button>未完了</button>
+                <button>完了</button>
+            </div>
+            <div>
+                <span>0</span>件の未完了
+                <button>完了を一括削除</button>
+            </div>
+        </section>
+        <ul>
+            <li>
+                <input type="checkbox" />
+                <p>Javacriptの作成</p>
+                <button>削除</button>
+            </li>
+        </ul>
+     </main>
     </body>
 </html>
