自習だるい

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div>
                 <span id="left-count">0</span>件の未完了
-                <button>完了を一括削除</button>
+                <button id="clear-completed">完了を一括削除</button>
             </div>
         </section>
         <ul id="todo-list">
